# flecs-polyglot

./: Makefile  README.md
rust/flecs_core/: Cargo.toml  build.rs  flecs.c  flecs.h
rust/flecs_core/.cargo/: config.toml
rust/flecs_core/src/: bindings.rs  lib.rs  main.rs
ts/: package.json  spack.config.js  tsconfig.json
ts/examples/: tsconfig.json
ts/examples/basic/: package.json
ts/examples/basic/src/: index.ts
ts/src/: ecs.ts  emscripten.ts  index.ts
ts/src/utils/: iterator.ts  sparse-map.ts  typed-arrays.ts
