[package]
name = "flecs_core"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.0"
bindgen = "0.69.4"

[lib]
crate-type = ["lib"]

[dependencies]
once_cell = "1.19.0"
# Temporary workaround to make trampoline work for toxoid engine
toxoid_api = { path="../../../../crates/toxoid_api" }

[features]
default = []
multithread = []